mType/tests/testFiles/error/error/syntaxInvalidFunctionName.mt
function 123invalidName(): int {
    return 0;
}